# Fortran-codes-for-TC-course

./: README.md
Ivkovic_Zarko_Calculus/: CMakeLists.txt  README.html  README.md  compile.sh
Ivkovic_Zarko_Calculus/data/Part 2.1/: data  script.py
Ivkovic_Zarko_Calculus/src/: integrals.f95  integrals.mod  kinds.mod  optimization.f95  optimization.mod  part11.f95  part12.f95  part13.f95  part21.f95  part22.f95
Ivkovic_Zarko_Linear_Algebra/: CMakeLists.txt  README.html  README.md  compile_and_run.sh
Ivkovic_Zarko_Linear_Algebra/INPUT/Part1/: points_1.data  points_2.data  points_3.data  points_4.data  points_5.data
Ivkovic_Zarko_Linear_Algebra/INPUT/Part2/: benzene.xyz  butadiene.xyz  cyclopentyl.xyz  naphthalene.xyz  pyrene.xyz
Ivkovic_Zarko_Linear_Algebra/SCRIPTS/: benzene_gen_script.m  butadiene_gen_script.m  cyclopentyl_gen_script.m  naphthalene_gen_script.m  part1.py  part2.py  pyrene_gen_script.m
Ivkovic_Zarko_Linear_Algebra/src/: inout.f95  kinds.f95  linear_algebra.f95  math.f95  part1.f95  part2.f95
